2011-04-20  Hedayat Vatankhah  <hedayat.fwd@gmail.com>

	* cmake/FindODE.cmake: 
	- ODE_CONFIG_EXEC variable can be used to specify alternative ode-config 
	  executable

2011-03-28  Hedayat Vatankhah  <hedayat.fwd@gmail.com>

	* plugin/sparkmonitor/sparkmonitorlogfileserver.cpp
	  (SparkMonitorLogFileServer::StartCycle): 
	- don't do anything in StartCycle() before time 0.1. it is a workaround a
	  random crash which might be because of some kind of initialization delay
	
	* spark/spark.rb: 
	- set adjust speed mode for both monitor and log player to prevent 
	  waisting any time trying to catch up in physics update (which they don't
	  have at all)!

2011-03-27  Hedayat Vatankhah  <hedayat.fwd@gmail.com>

	* plugin/sparkmonitor/sparkmonitorlogfileserver.h: 
	* plugin/sparkmonitor/sparkmonitorlogfileserver.cpp: 
	* plugin/sparkmonitor/sparkmonitorlogfileserver_c.cpp: 
	- call mActiveScene's SetModified() and UpdateCache() so that it shows the
	  field again
	- remove mStepDelay, it is not needed as the timing is controlled by the 
	  simulation server

2011-03-26  Hedayat Vatankhah  <hedayat.fwd@gmail.com>

	* plugin/sexpparser/sexpparser.h: 
	* plugin/sexpparser/sexpparser.cpp: 
	* plugin/rubysceneimporter/rubysceneimporter.h: 
	* plugin/rubysceneimporter/rubysceneimporter.cpp: 
	* plugin/sparkmonitor/sparkmonitorclient.h: 
	* plugin/sparkmonitor/sparkmonitorclient.cpp: 
	* plugin/sparkmonitor/sparkmonitorlogfileserver.h: 
	* plugin/sparkmonitor/sparkmonitorlogfileserver.cpp: 
	- updated to be compatible with the reentrant s-expression library	
	
	* utility/sfsexp/sexp.h:
	* utility/sfsexp/sexp.c: 
	* utility/sfsexp/parser.c: 
	* utility/sfsexp/io.c: 
	* utility/sfsexp/sexp_ops.c: 
	* utility/sfsexp/sexp_ops.h: 
	- s-expression library is now reentrant and thread-safe. solves many 
	  crashes in multi-threaded mode
	 
	* NEWS: 
	* RELEASE:
	- updated for 0.2.2 release 

	* lib/kerosin/inputserver/inputcontrol.cpp (InputControl::InputControl): 