@@ -16,6 +16,8 @@ Support for the camera sensor is improved too. More details are as follows:
 - HingePerceptor can report torque
 - Better Performance
 - New timing system result in more cleaner code and prevent wasting CPU time
+- Do not block on sending data to clients. Previously, simulator would block on
+  send() until it can send all data to clients.
 
 You can get the package on the Simspark page on SourceForge
 at http://sourceforge.net/projects/simspark/
